--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -1990,9 +1990,7 @@ function activeLink(urlPart) {
         <div class="swiper">
           <div class="testimonial__content swiper-wrapper">
             <figure class="testimonial__content-card swiper-slide">
-              <blockquote class="testimonial__content-card-description">
-                Nightwatch.js has been making remarkable strides since v2, with a steadfast commitment to enhancing the modern dev experience & providing aid to open-source users.
-              </blockquote>
+              <blockquote class="testimonial__content-card-description">Nightwatch.js has been making remarkable strides since v2, with a steadfast commitment to enhancing the modern dev experience & providing aid to open-source users.</blockquote>
               <footer class="testimonial__content-card-author">
                 <div class="testimonial__content-card-author-image">
                   <img loading="lazy" src="images/landing/testimonial/testimonial-tim-yao.png"
@@ -2014,9 +2012,7 @@ function activeLink(urlPart) {
               </footer>
             </figure>
             <figure class="testimonial__content-card swiper-slide">
-              <blockquote class="testimonial__content-card-description">
-                Nightwatch’s intuitive API & syntax makes testing reliable & maintainable. Faster feedback loops via parallel testing lead to faster deployments. Highly recommended!
-              </blockquote>
+              <blockquote class="testimonial__content-card-description">Nightwatch’s intuitive API & syntax makes testing reliable & maintainable. Faster feedback loops via parallel testing lead to faster deployments. Highly recommended!</blockquote>
               <footer class="testimonial__content-card-author">
                 <div class="testimonial__content-card-author-image">
                   <img loading="lazy" src="images/landing/testimonial/testimonial-reallymello.png"
@@ -2038,10 +2034,7 @@ function activeLink(urlPart) {
               </footer>
             </figure>
             <figure class="testimonial__content-card swiper-slide">
-              <blockquote class="testimonial__content-card-description">
-                Nightwatch is a great tool for testing the front-end of your web applications. It’s easy to use, yet
-                powerful enough to handle any application.
-              </blockquote>
+              <blockquote class="testimonial__content-card-description">Nightwatch is a great tool for testing the front-end of your web applications. It’s easy to use, yet powerful enough to handle any application.</blockquote>
               <footer class="testimonial__content-card-author">
                 <div class="testimonial__content-card-author-image">
                   <img loading="lazy" src="images/landing/testimonial/testimonial-1-author.png"
