Fix: navbar content

--- a/src/includes/navbar.ejs
+++ b/src/includes/navbar.ejs
@@ -116,7 +116,7 @@
         <li><a class="navigation-link <%= activeLink('/guide') %>"
             href="/guide/overview/what-is-nightwatch.html">Guide</a></li>
         <li><a class="navigation-link <%= activeLink('/api') %>" href="/api/">API</a></li>
-        <li><a class="navigation-link <%= activeLink('/about') %>" href="/about/community/">Community</a></li>
+        <li><a class="navigation-link <%= activeLink('/about') %>" href="/about/community/">About</a></li>
         <li><a class="navigation-link <%= activeLink('/blog') %>" href="/blog/">Blog</a></li>
       </ul>
       <ul class="navigation-list social">
