--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -328,7 +328,7 @@
 .hero__action-copy-command-button {
   background: var(--button-background-color-dark);
   border-radius: 6px;
-  border: 1px solid var(--button-border-color-dark);
+  border: 1px solid var(--button-border-color);
   box-shadow: inset 0 -4px 0 var(--button-border-color);
   color: var(--text-color-light);
   font-family: var(--font-family-code);
@@ -363,7 +363,7 @@
 .hero__action-button--get-started {
   background: var(--button-background-color-light);
   border-radius: 6px;
-  border: 1px solid var(--button-border-color-dark);
+  border: 1px solid var(--button-border-color);
   box-shadow: inset 0 -4px 0 var(--button-box-shadow);
   color: var(--text-color);
   font-family: var(--font-family-code);
@@ -885,7 +885,7 @@
   align-items: center;
   background: var(--button-background-color-dark);
   border-radius: 6px;
-  border: 1px solid var(--button-border-color-dark);
+  border: 1px solid var(--button-border-color);
   box-shadow: inset 0px -4.35724px 0px var(--button-border-color);
   color: var(--text-color-light);
   display: flex;
@@ -978,7 +978,7 @@
   align-items: center;
   background: var(--button-background-color-dark);
   border-radius: 6px;
-  border: 1px solid var(--button-border-color-dark);
+  border: 1px solid var(--button-border-color);
   box-shadow: inset 0px -4.35724px 0px var(--button-border-color);
   color: var(--text-color-light);
   display: flex;
@@ -1164,7 +1164,7 @@
 .performance__content-description-button {
   background: var(--button-background-color-dark);
   border-radius: 6px;
-  border: 1px solid var(--button-border-color-dark);
+  border: 1px solid var(--button-border-color);
   box-shadow: inset 0px -4.35724px 0px var(--button-border-color);
   color: var(--text-color-light);
   display: flex;
@@ -1317,7 +1317,7 @@
 .comparison__content-wrapper-button {
   background: var(--button-background-color-dark);
   border-radius: 6px;
-  border: 1px solid var(--button-border-color-dark);
+  border: 1px solid var(--button-border-color);
   box-shadow: inset 0px -4.35724px 0px var(--button-border-color);
   color: var(--text-color-light);
   display: flex;
@@ -1974,7 +1974,7 @@
 .call-to-action-content-action-copy-command-button {
   background: var(--button-background-color-dark);
   border-radius: 6px;
-  border: 2px solid var(--button-border-color-dark);
+  border: 2px solid var(--button-border-color);
   box-shadow: inset 0 -4px 0 var(--button-border-color);
   color: var(--text-color-light);
   font-family: var(--font-family-code);
@@ -2009,7 +2009,7 @@
 .call-to-action-content-action-button--get-started {
   background: var(--button-background-color-light);
   border-radius: 6px;
-  border: 1px solid var(--button-border-color-dark);
+  border: 1px solid var(--button-border-color);
   box-shadow: inset 0 -4px 0 var(--button-box-shadow);
   color: var(--text-color);
   font-family: var(--font-family-code);
@@ -2258,7 +2258,7 @@
 .footer__wrapper-inner-social-subscribe-btn {
   background: var(--button-background-color-dark);
   border-radius: 4.3px;
-  border: 0.752783px solid var(--button-border-color-dark);
+  border: 0.752783px solid var(--button-border-color);
   box-shadow: inset 0px -3.28005px 0px var(--button-border-color);
   color: var(--background-color);
   font-family: var(--font-family-code);
