--- a/src/includes/navbar.ejs
+++ b/src/includes/navbar.ejs
@@ -185,7 +185,7 @@
       <ul>
         <li><a href="/guide/overview/what-is-nightwatch.html">Guide</a></li>
         <li><a href="/api/">API</a></li>
-        <li><a href="/about/community/">Community</a></li>
+        <li><a href="/about/community/">About</a></li>
         <li><a href="/blog">Blog</a></li>
         <li><a href="https://github.com/nightwatchjs/">Github</a></li>
         <li><a href="https://discord.com/invite/SN8Da2X">Discord</a></li>
