--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -148,11 +148,15 @@ function activeLink(urlPart) {
     
       <!-- Nightwatch Feature section start -->
       <section class="features">
+        <!-- Line Path -->
+        <div class="features__timeline-path" role="presentation"></div>
+
         <h2 class="features__heading">Why<span class="features__heading--highlight">Nightwatch?</span></h2>
-    
+
         <!-- First Feature -->
         <article class="features__content features__content--reverse">
           <div class="features__content-wrapper">
+            <div class="features__timeline-dot" role="presentation"></div>
             <h3 class="features__content-wrapper-heading">Web, Mobile Native</h3>
             <div class="features__content-wrapper-description">
               <p class="features__content-wrapper-description-title">One framework for all platforms.</p>
@@ -246,10 +250,11 @@ function activeLink(urlPart) {
             </svg>
           </div>
         </article>
-    
+
         <!-- Second feature -->
         <article class="features__content">
           <div class="features__content-wrapper">
+            <div class="features__timeline-dot features__timeline-dot--reverse" role="presentation"></div>
             <h3 class="features__content-wrapper-heading">Powerful debugging</h3>
             <div class="features__content-wrapper-description">
               <p class="features__content-wrapper-description-title">Save time hunting for bugs.</p>
@@ -364,6 +369,7 @@ function activeLink(urlPart) {
         <!-- Third Feature -->
         <article class="features__content features__content--reverse">
           <div class="features__content-wrapper">
+            <div class="features__timeline-dot" role="presentation"></div>
             <h3 class="features__content-wrapper-heading">Designed for scale</h3>
             <div class="features__content-wrapper-description">
               <p class="features__content-wrapper-description-title">Automate all your edge cases</p>
