--- a/public/css/base.css
+++ b/public/css/base.css
@@ -26,6 +26,8 @@
   --pagination-bullet-background-color: hsla(46.67, 18%, 80.39%, 1);
   --header-border-color: hsla(270, 8%, 90.2%, 1);
   --integration-hover-background-color: hsla(0, 0%, 94%, 1);
+  --timeline-dot-border-color: hsla(217.5, 14.81%, 89.41%, 1);
+  --timeline-background-color: hsla(217.5, 14.81%, 89.41%, 1);
 
 
   /* --color-white: hsla(0, 0%, 100%, 1);
