minor fixes; make navbar logo smaller

--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -20,9 +20,9 @@
 
 /* Navigation section start */
 .navigation__logo {
-  width: 242px;
+  width: 200px;
   margin-right: auto;
-  padding: 10px 0;
+  padding: 16px 0;
 }
 
 .navigation__logo svg {
@@ -75,7 +75,7 @@
 
 .navigation-list:last-of-type {
   gap: 32px;
-  padding-left: 52px;
+  padding-left: 32px;
 }
 
 .navigation-list>li button {
@@ -1325,13 +1325,13 @@
   font-feature-settings: 'salt'on;
   font-size: var(--font-size-h7);
   font-weight: 600;
-  gap: 13px;
   line-height: var(--line-height-h7);
   padding: 12px 20px;
   text-decoration: none;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
+  margin-bottom: 20px;
 }
 
 .comparison__content-wrapper-button:hover {
@@ -1483,8 +1483,9 @@
 }
 
 .testimonial__content-card-author-image {
-  border: 2px solid #EFEFEF;
-  border-radius: 5px var(--card-border-color);
+  border: 2px solid var(--card-border-color);
+  border-radius: 5px;
+  overflow: hidden;
 }
 
 .testimonial__content-card-author-image img {
@@ -1841,6 +1842,10 @@
 
 .open-source-content-card-text--paragraph a {
   color: inherit;
+}
+
+.open-source-content-card-text--paragraph a:hover {
+  color: var(--text-color-accent);
 }
 
 @media (max-width: 480px) {
