--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -434,8 +434,10 @@ a.navigation-link.active {
 }
 
 .hero__companies__logos img {
-  width: 165px;
+  width: 100%;
   height: 100%;
+  min-width: 0;
+  scale: 0.8;
 }
 
 .hero__companies__logos img:first-child {
@@ -1514,12 +1516,9 @@ a.navigation-link.active {
   align-items: center;
 }
 
-.testimonial__content-card-author-image {
-  border: 2px solid #EFEFEF;
-  border-radius: 5px var(--card-border-color);
-}
-
 .testimonial__content-card-author-image img {
+  border: 2px var(--card-border-color);
+  border-radius: 5px;
   width: 90px;
   height: 100%;
 }
