feat: timeline for capabilities section

--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -568,6 +568,33 @@ a.navigation-link.active {
   position: relative;
 }
 
+.features__timeline-path {
+  height: 79%;
+  position: absolute;
+  width: 2px;
+  background-image: linear-gradient(180deg, var(--timeline-background-color) 100%, var(--timeline-background-color) 100%);
+  background-size: 2px 8px;
+  background-repeat: repeat-y;
+  left: 50%;
+  top: 160px;
+}
+
+.features__timeline-dot {
+  width: 20px;
+  height: 20px;
+  border-radius: 60px;
+  border: 2px solid var(--timeline-dot-border-color);
+  position: absolute;
+  left: -93px;
+  top: 23px;
+  background: var(--background-color)
+}
+
+.features__timeline-dot.features__timeline-dot--reverse {
+  left: unset;
+  right: -94px;
+}
+
 .features__heading {
   color: var(--text-color);
   font-size: var(--font-size-h2);
@@ -604,33 +631,6 @@ a.navigation-link.active {
   flex: 1 1 0%;
   gap: 24px;
   position: relative;
-}
-
-.features__timeline-path {
-  height: 79%;
-  position: absolute;
-  width: 2px;
-  background-image: linear-gradient(180deg, var(--timeline-background-color) 100%, var(--timeline-background-color) 100%);
-  background-size: 2px 8px;
-  background-repeat: repeat-y;
-  left: 50%;
-  top: 160px;
-}
-
-.features__timeline-dot {
-  width: 20px;
-  height: 20px;
-  border-radius: 60px;
-  border: 2px solid var(--timeline-dot-border-color);
-  position: absolute;
-  left: -93px;
-  top: 23px;
-  background: var(--background-color)
-}
-
-.features__timeline-dot.features__timeline-dot--reverse {
-  left: unset;
-  right: -94px;
 }
 
 .features__content-wrapper-heading {
@@ -845,13 +845,64 @@ a.navigation-link.active {
   position: relative;
 }
 
+.capabilities__timeline-path {
+  height: 106%;
+  width: 87%;
+  position: absolute;
+  border: 2px solid var(--timeline-background-color);
+  border-radius: 60px;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.capabilities__timeline-path::before {
+  content: '';
+  position: absolute;
+  top: -163px;
+  left: 50%;
+  height: 11%;
+  width: 50%;
+  width: 2px;
+  background-image: linear-gradient(180deg, var(--timeline-background-color) 100%, var(--timeline-background-color) 100%);
+  background-size: 2px 8px;
+  background-repeat: repeat-y;
+}
+
+.capabilities__timeline-path::after {
+  content: '';
+  position: absolute;
+  bottom: -105px;
+  left: 50%;
+  height: 7%;
+  width: 50%;
+  width: 2px;
+  background-image: linear-gradient(180deg, var(--timeline-background-color) 100%, var(--timeline-background-color) 100%);
+  background-size: 2px 8px;
+  background-repeat: repeat-y;
+}
+
+.capabilities__timeline-dot {
+  width: 20px;
+  height: 20px;
+  border-radius: 60px;
+  border: 2px solid var(--timeline-dot-border-color);
+  position: absolute;
+  left: calc(50% - 9px);
+  bottom: -74px;
+  background: var(--background-color);
+  z-index: 1;
+}
+
 .capabilities__heading {
   color: var(--text-color);
   font-size: var(--font-size-h2);
   font-weight: 700;
   line-height: var(--line-height-h2);
-  padding: 51px 182px;
+  padding: 51px 0;
   text-align: center;
+  max-width: 690px;
+  margin: auto;
 }
 
 .capabilities__heading--highlight {
