--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -1291,6 +1291,12 @@ function activeLink(urlPart) {
     
       <!-- Nightwatch Capabilities section start -->
       <section class="capabilities">
+
+        <!-- Line Path -->
+        <div class="capabilities__timeline-path" role="presentation">
+          <div class="capabilities__timeline-dot" role="presentation"></div>
+        </div>
+
         <h2 class="capabilities__heading">
           <span class="capabilities__heading--highlight">Powerful capabilities</span>for everything you need
         </h2>
