--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -1724,6 +1724,12 @@ function activeLink(urlPart) {
     
       <!-- Nightwatch Performance section start -->
       <section class="performance">
+
+        <!-- Line Path -->
+        <div class="performance__timeline-path" role="presentation">
+          <div class="performance__timeline-dot" role="presentation"></div>
+        </div>
+
         <h2 class="performance__heading"><span class="performance__heading--highlight">Faster</span> than ever</h2>
     
         <article class="performance__content">
