--- a/src/includes/navbar.ejs
+++ b/src/includes/navbar.ejs
@@ -165,14 +165,14 @@
           <ul id="releaseVersionMenu" role="menu" aria-labelledby="releaseVersionButton">
             <li role="menuitem"><a href="#!">Previous 2.6.19
               </a></li>
-            <li role="menuitem"><a href="#!">Version 1.7</a></li>
-            <li role="menuitem"><a href="#!">Version 0.9</a></li>
-            <li role="menuitem"><a href="#!">All versions</a></li>
+            <li role="menuitem"><a href="https://nightwatchjs.org/v17/">Version 1.7</a></li>
+            <li role="menuitem"><a href="https://nightwatchjs.org/v09/">Version 0.9</a></li>
+            <li role="menuitem"><a href="/guide/overview/whats-new.html">All versions</a></li>
           </ul>
         </li>
       </ul>
       <button class="navigation-menu-toggle" id="mobileMenuToggle">
-        <svg viewBox="0 0 12 10" class="hamburger" height="40px" width="40px">
+        <svg viewBox="0 0 12 10" class="hamburger" height="30px" width="30px">
             <path d="M10,2 L2,2" class="bar-1"></path>
             <path d="M2,5 L10,5" class="bar-2"></path>
             <path d="M10,8 L2,8" class="bar-3"></path>
