--- a/src/includes/scripts.ejs
+++ b/src/includes/scripts.ejs
@@ -18,10 +18,10 @@
 
 <script src="https://www.googletagmanager.com/gtm.js?id=GTM-MWC4FHS"></script>
 
-<%- include('docsearch') %>
-
+<%- include('utils') %>
 <script type="module" src="<%= url("~/src/js/app-esm.js") %>"></script>
 <script type="module" src="<%= url("~/src/js/dropdown.js") %>"></script>
+<script type="module" src="<%= url("~/src/js/landing.js") %>"></script>
 
 <script type="module">
   import {onRender} from 'postdoc/client';
