feat: testimonial timeline

--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -1940,6 +1940,12 @@ function activeLink(urlPart) {
     
       <!--  Nightwatch Testimonial section start -->
       <section class="testimonial">
+
+        <!-- Line Path -->
+        <div class="testimonial__timeline-path" role="presentation">
+          <div class="testimonial__timeline-dot" role="presentation"></div>
+        </div>
+
         <h2 class="testimonial__heading">Hear<span class="testimonial__heading--highlight">from the best</span></h2>
     
         <div class="swiper">
