--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -1567,6 +1567,61 @@ a.navigation-link.active {
   position: relative;
 }
 
+.testimonial__timeline-path {
+  height: 430%;
+  width: 87%;
+  position: absolute;
+  border: 2px solid var(--timeline-background-color);
+  border-radius: 60px;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.testimonial__timeline-path::before {
+  content: '';
+  position: absolute;
+  top: -142px;
+  left: 50%;
+  height: 6%;
+  width: 2px;
+  background-image: linear-gradient(180deg, var(--timeline-background-color) 100%, var(--timeline-background-color) 100%);
+  background-size: 2px 8px;
+  background-repeat: repeat-y;
+}
+
+.testimonial__timeline-dot {
+  width: 20px;
+  height: 20px;
+  border-radius: 60px;
+  border: 2px solid var(--timeline-dot-border-color);
+  position: absolute;
+  left: calc(50% - 9px);
+  top: -63px;
+  background: var(--background-color);
+  z-index: 1;
+}
+
+.testimonial__timeline-dot::before {
+  content: '';
+  background: var(--background-color);
+  position: absolute;
+  top: -12px;
+  left: 3px;
+  height: 10px;
+  width: 10px;
+}
+
+.testimonial__timeline-dot::after {
+  content: '';
+  background: var(--background-color);
+  position: absolute;
+  bottom: -8px;
+  left: 5px;
+  height: 6px;
+  width: 6px;
+}
+
 .testimonial__heading {
   color: var(--text-color);
   font-size: var(--font-size-h2);
