fix: timeline for mobile

--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -1266,6 +1266,7 @@ function activeLink(urlPart) {
     
         <!-- Community section -->
         <div class="features__community-stats" role="region" aria-label="Nightwatch stats">
+          <div class="features__community-stats-timeline-dot" role="presentation"></div>
           <p class="features__community-stats__text">Loved by the community</p>
           <div class="features__community-stats-container">
             <div class="features__community-stats-wrapper">
@@ -1296,6 +1297,8 @@ function activeLink(urlPart) {
         <div class="capabilities__timeline-path" role="presentation">
           <div class="capabilities__timeline-dot" role="presentation"></div>
         </div>
+
+        <div class="capabilities__timeline-path-mobile" role="presentation"></div>
 
         <h2 class="capabilities__heading">
           <span class="capabilities__heading--highlight">Powerful capabilities</span>for everything you need
@@ -1729,6 +1732,8 @@ function activeLink(urlPart) {
           <div class="performance__timeline-dot" role="presentation"></div>
         </div>
 
+        <div class="performance__timeline-dot-mobile" role="presentation"></div>
+
         <h2 class="performance__heading"><span class="performance__heading--highlight">Faster</span> than ever</h2>
     
         <article class="performance__content">
@@ -1772,6 +1777,7 @@ function activeLink(urlPart) {
 
       <!-- Nightwatch Comparison section start -->
       <section class="comparison">
+        <div class="comparison__timeline-dot" role="presentation"></div>
         <h2 class="comparison__heading">No<span class="comparison__heading--highlight">compromises</span></h2>
 
         <article class="comparison__content">
@@ -1945,6 +1951,8 @@ function activeLink(urlPart) {
           <div class="testimonial__timeline-dot" role="presentation"></div>
         </div>
 
+        <div class="testimonial__timeline-path-mobile" role="presentation"></div>
+
         <h2 class="testimonial__heading">Hear<span class="testimonial__heading--highlight">from the best</span></h2>
     
         <div class="swiper">
@@ -2026,6 +2034,9 @@ function activeLink(urlPart) {
     
       <!-- Nightwatch Integrations section start -->
       <section class="integration integration-swiper">
+
+        <div class="integration__timeline-dot" role="presentation"></div>
+
         <h2 class="integration__heading">Seamlessly<span class="integration__heading--highlight">Integrate with
             Nightwatch</span></h2>
     
@@ -2927,6 +2938,9 @@ function activeLink(urlPart) {
     
       <!-- Open Source section start -->
       <section class="open-source">
+
+        <div class="open-source__timeline-dot" role="presentation"></div>
+
         <h2 class="open-source__heading">Open Source<span class="open-source__heading--highlight">at its best</span>
         </h2>
     
