--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -717,6 +717,10 @@ a.navigation-link.active {
   background: var(--background-color);
 }
 
+.features__community-stats-timeline-dot {
+  display: none;
+}
+
 .features__community-stats__text {
   color: var(--text-color);
   font-size: var(--font-size-h5);
@@ -824,6 +828,18 @@ a.navigation-link.active {
     margin-bottom: 40px;
   }
 
+  .features__community-stats-timeline-dot {
+    display: block;
+    width: 20px;
+    height: 20px;
+    border-radius: 60px;
+    border: 2px solid var(--timeline-dot-border-color);
+    position: relative;
+    left: -217px;
+    top: 94px;
+    background: var(--background-color);
+  }
+
   .features__community-stats__text {
     font-size: var(--font-size-h6);
   }
@@ -875,6 +891,10 @@ a.navigation-link.active {
   left: 0;
   right: 0;
   margin: auto;
+}
+
+.capabilities__timeline-path-mobile {
+  display: none;
 }
 
 .capabilities__timeline-path::before {
@@ -1144,6 +1164,19 @@ a.navigation-link.active {
     display: none;
   }
 
+  .capabilities__timeline-path-mobile {
+    display: block;
+    height: 9%;
+    width: 94%;
+    position: absolute;
+    border-right: 2px solid var(--timeline-background-color);
+    border-radius: 0 60px;
+    left: -29px;
+    right: 0;
+    margin: auto;
+    border-top: 2px solid var(--timeline-background-color);
+  }
+
   .capabilities__heading {
     padding: 40px 30px 24px;
     text-align: unset;
@@ -1249,6 +1282,10 @@ a.navigation-link.active {
   background-image: linear-gradient(180deg, var(--timeline-background-color) 100%, var(--timeline-background-color) 100%);
   background-size: 2px 8px;
   background-repeat: repeat-y;
+}
+
+.performance__timeline-dot-mobile {
+  display: none;
 }
 
 .performance__timeline-dot {
@@ -1370,6 +1407,18 @@ a.navigation-link.active {
     display: none;
   }
 
+  .performance__timeline-dot-mobile {
+    display: block;
+    width: 20px;
+    height: 20px;
+    border-radius: 60px;
+    border: 2px solid var(--timeline-dot-border-color);
+    position: relative;
+    left: -31px;
+    top: 27px;
+    background: var(--background-color);
+  }
+
   .performance__heading {
     text-align: unset;
     font-size: var(--font-size-h5);
@@ -1408,6 +1457,10 @@ a.navigation-link.active {
   max-width: min(var(--layout-content-width), 90%);
   width: 100%;
   margin-bottom: 160px;
+}
+
+.comparison__timeline-dot {
+  display: none;
 }
 
 .comparison__heading {
@@ -1523,6 +1576,18 @@ a.navigation-link.active {
     margin-bottom: 25px;
   }
 
+  .comparison__timeline-dot {
+    display: block;
+    width: 20px;
+    height: 20px;
+    border-radius: 60px;
+    border: 2px solid var(--timeline-dot-border-color);
+    position: relative;
+    left: -31px;
+    top: 27px;
+    background: var(--background-color);
+  }
+
   .comparison__heading {
     text-align: unset;
     font-size: var(--font-size-h5);
@@ -1600,6 +1665,10 @@ a.navigation-link.active {
   left: 0;
   right: 0;
   margin: auto;
+}
+
+.testimonial__timeline-path-mobile {
+  display: none;
 }
 
 .testimonial__timeline-path::before {
@@ -1751,6 +1820,19 @@ a.navigation-link.active {
     display: none;
   }
 
+  .testimonial__timeline-path-mobile {
+    display: block;
+    height: 30%;
+    width: 97%;
+    position: absolute;
+    border-right: 2px solid var(--timeline-background-color);
+    border-radius: 0 60px;
+    left: -56px;
+    right: 0;
+    margin: auto;
+    border-top: 2px solid var(--timeline-background-color);
+  }
+
   .swiper {
     width: 100%;
     height: 100%;
@@ -1823,6 +1905,10 @@ a.navigation-link.active {
   max-width: min(var(--layout-content-width), 90%);
   width: 100%;
   position: relative;
+}
+
+.integration__timeline-dot {
+  display: none;
 }
 
 .integration__heading {
@@ -1930,6 +2016,18 @@ a.navigation-link.active {
     margin-bottom: 90px;
   }
 
+  .integration__timeline-dot {
+    display: block;
+    width: 20px;
+    height: 20px;
+    border-radius: 60px;
+    border: 2px solid var(--timeline-dot-border-color);
+    position: relative;
+    left: -31px;
+    top: 28px;
+    background: var(--background-color);
+  }
+
   .integration__content-card:hover {
     background: var(--background-color);
     cursor: unset;
@@ -2010,6 +2108,10 @@ a.navigation-link.active {
   position: relative;
 }
 
+.open-source__timeline-dot {
+  display: none;
+}
+
 .open-source__heading {
   color: var(--text-color);
   font-size: var(--font-size-h2);
@@ -2086,6 +2188,18 @@ a.navigation-link.active {
     margin-left: 50px;
     max-width: min(480px, 83%);
     margin-bottom: 60px;
+  }
+
+  .open-source__timeline-dot {
+    display: block;
+    width: 20px;
+    height: 20px;
+    border-radius: 60px;
+    border: 2px solid var(--timeline-dot-border-color);
+    position: relative;
+    left: -31px;
+    top: 28px;
+    background: var(--background-color);
   }
 
   .open-source__heading {
