--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -108,6 +108,8 @@ a.navigation-link.active {
   box-shadow: 3px 4px 7px 1px var(--dropdown-box-shadow-color);
   border-radius: 10px;
   padding: 21px 25px;
+  width: -webkit-max-content;
+  width: -moz-max-content;
   width: max-content;
   left: -90px;
   top: 45px;
@@ -677,6 +679,7 @@ a.navigation-link.active {
   flex-direction: column;
   font-size: var(--font-size-h7);
   line-height: var(--line-height-h7-s);
+  -webkit-padding-start: 26px;
   padding-inline-start: 26px;
 }
 
@@ -1680,7 +1683,7 @@ a.navigation-link.active {
   position: absolute;
   top: -142px;
   left: 50%;
-  height: 6%;
+  height: 4.8%;
   width: 2px;
   background-image: linear-gradient(180deg, var(--timeline-background-color) 100%, var(--timeline-background-color) 100%);
   background-size: 2px 8px;
@@ -1819,7 +1822,7 @@ a.navigation-link.active {
 }
 
 @media (max-width: 768px) {
-  
+
   .testimonial__timeline-path {
     display: none;
   }
