--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -1956,10 +1956,11 @@ a.navigation-link.active {
 }
 
 .integration__content-link {
-  flex: 1 1 0;
+  flex: 1 1 150px;
   text-decoration: none;
   display: flex;
   justify-content: center;
+  min-width: 0;
 }
 
 .integration__content-card:hover {
@@ -1977,16 +1978,17 @@ a.navigation-link.active {
   background: var(--background-color);
   border: 2px solid var(--card-border-color);
   border-radius: 16px;
-  min-height: 126px;
   gap: 12px;
-  width: 180px;
+  width: 100%;
   height: 100%;
   justify-content: space-between;
-  padding: 31px 41px;
+  padding: 31px 0;
 }
 
 .integration__content-card-image {
-  height: 51px;
+  width: 51px;
+  margin: auto;
+  height: 100%;
 }
 
 .integration__content-card-image svg {
@@ -2053,12 +2055,6 @@ a.navigation-link.active {
 
   .integration__content {
     display: none;
-  }
-
-  .integration__content-card {
-    width: 150px;
-    padding: 31px 13px;
-    gap: 12px;
   }
 
   .integration__content-mobile {
