Substack iFrame changes

--- a/src/includes/footer.ejs
+++ b/src/includes/footer.ejs
@@ -151,7 +151,7 @@
         </div>
         <div class="footer__wrapper-inner-social-subscribe">
           <h3 class="footer__wrapper-inner-social-subscribe-title">Subscribe to our newsletter</h3>
-          <iframe loading="lazy" src="https://nightwatch.substack.com/embed" width="80%" height="125px" style="border-radius: 25px; background: #1B1B1B" id="substack"  frameborder="0" scrolling="no" title="nightwatch-substack"></iframe>
+          <iframe loading="lazy" src="https://nightwatch.substack.com/embed" width="80%" height="125px" style="margin-left: -12px;" id="substack"  frameborder="0" scrolling="no" title="nightwatch-substack"></iframe>
         </div>
         <div class="footer__wrapper-inner-social-links">
           <a href="https://github.com/nightwatchjs/nightwatch" target="_blank">
