fix: mobile links for integrations

--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -2446,7 +2446,7 @@ function activeLink(urlPart) {
             <div class="integration__content-card-title">Azure</div>
           </article>
         </a>
-        <a href="/guide/ci-integrations/run-nightwatch-on-azure-pipelines.html" class="integration__content-link"
+        <a href="/guide/quickstarts/create-and-run-a-test-with-cloud-providers.html#running-on-sauce-labs" class="integration__content-link"
           target="_blank" rel="noopener noreferrer">
           <article class="integration__content-card">
             <div class="integration__content-card-image">
@@ -2455,7 +2455,7 @@ function activeLink(urlPart) {
             <div class="integration__content-card-title">SauceLabs</div>
           </article>
         </a>
-        <a href="/guide/ci-integrations/run-nightwatch-on-azure-pipelines.html" class="integration__content-link"
+        <a href="/guide/quickstarts/create-and-run-a-test-with-cloud-providers.html#running-on-browserstack" class="integration__content-link"
           target="_blank" rel="noopener noreferrer">
           <article class="integration__content-card">
             <div class="integration__content-card-image">
